# Django-Rest-Framework-DRF-

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
core/: admin.py  models.py  serializer.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_testapi.py  0003_userapi.py  0004_person.py  0005_people.py  0006_element.py  0007_subject.py  0008_school.py
core/templates/: home.html  people_list.html  person_list.html
item/: admin.py  models.py  serializer.py  urls.py  views.py
item/migrations/: 0001_initial.py  0002_animal.py
item/templates/: index.html
myapp/: admin.py  models.py  serializer.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_count.py  0003_tree.py  0004_alter_count_age.py
myapp/templates/: index.html  user_list.html
shellproject/: asgi.py  settings.py  urls.py  wsgi.py
